<resources>
    <string name="facebook_app_id">646386215539811</string>
    <string name="fb_login_protocol_scheme">fb646386215539811</string>

    <string name="twitter_key">ak4pSnvpXx1nyr8ErTgBJIt6g</string>
    <string name="twitter_secret">2GFhPw8VVazOjTaTRL8xdF73BrR5lf3VVFnFGNzwKSuMb3kqNA</string>

    <string name="app_name">V I A</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="my_qr_code">my_qr_code.png</string>
    <string name="my_profile_image">my_profile_image.png</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="no_profile_no_code">Please complete your profile to get a code</string>
    <string name="choose_photo">Choose photo from gallery</string>
    <string name="internet_test">api.a16_sd206.studev.groept.be</string>
    <string name="facebook_profile">Facebook profile</string>
    <string name="twitter_profile">Twitter profile</string>
    <string name="on_facebook">%s\'s profile</string>
    <string name="on_twitter">%s on Twitter</string>

    <!-- Content descriptions -->
    <string name="phone_icon">Phone icon</string>
    <string name="email_icon">Email icon</string>
    <string name="address_icon">Address icon</string>
    <string name="target_icon">Target icon</string>
    <string name="contact_image">Contact image</string>
    <string name="contact_image_large">Contact image large</string>
    <string name="qr_code">QR code</string>
    <string name="image_preview">Image preview</string>
</resources>
